[metadata]
name = cognix
version = 1.0
author = HCI Lab Ece Patras
# author_email = l.thomm@mailbox.org
description = Flow-based visual scripting in Python for streaming and offline scenarios
long_description = file: README.md
long_description_content_type = text/markdown
license_files =
    LICENSE
url = https://github.com/HeftyCoder/Ryven/tree/cognix
project_urls =
    Website = https://cognix.gr
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
python_requires = >=3.11
install_requires =
    cognixcore == 0.1.*
    cognixlib == 0.1.* # this might be optional
    PySide6 < 6.7
    Jinja2
    Pygments
    textdistance
    packaging
    qdarkstyle
    pyqtdarktheme
    waiting

[options.entry_points]
console_scripts =
    cognix = cognix:run_editor
    cognix-console = cognix:run_console
