[metadata]
name = cognix
version = v0.0.1
author = Georgios Papadoulis
author_email = gg.papadoulis@gmail.com
description = Library for processing EEG and Eye-Gaze signals in a graph-based manner.
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
python_requires = >=3.11
install_requires =
    ryvencore == 0.4.*
    traits
    traitsui
    numpy
    pyxdf
    pylsl
    fastapi
    Flask
    Flask-RESTful
    waitress
    xmltodict
    mne
    

