[metadata]
name = cognixlib
version = v0.1
author = HCI Lab Ece Patras
# author_email = gg.papadoulis@gmail.com
description = A scripting API for processing EEG and Eye-Gaze signals and a set of nodes that utilize the API
              for graph-based evaluation.
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
python_requires = >=3.11
install_requires =
    cognixcore == 0.1.*
    numpy
    pyxdf
    pylsl
    xmltodict
    mne
    scikit-learn
    mne_features
    mne_icalabel
    pyprep
    autoreject
    

