[metadata]
name = cognixnodes
version = v0.1
author = HCI Lab Ece Patras
# author_email = gg.papadoulis@gmail.com
description = Library of node for cognixcore for processing EEG and Eye-Gaze signals in a graph-based manner.
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
python_requires = >=3.11
install_requires =
    cognixcore == 0.1.*
    numpy
    pyxdf
    pylsl
    xmltodict
    mne
    scikit-learn
    

